--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,75 @@
     background-color: rgb(211, 43, 94);
     color: white;
     text-align: center;
+    font-size: 1.3rem;
+    height: 300px;
+    max-width: 1200px;
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+    font-size: 2rem;
+}
+
+.container {
+    margin: 20px 100px;
+    padding: 20px;
+    font-size: 1rem;
+    color: rgb(211, 43, 94);
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+}
+
+#user-age {
+    border-color: rgb(211, 43, 94);
+}
+
+.button {
+    margin-top: 30px;
+}
+
+#submit-btn {
+    color: rgb(211, 43, 94);
+    border-radius: 3px;
+    border-color: rgb(255, 153, 0);
+    margin-right: 20px;
+    padding: 5px;
+}
+
+#reset-btn {
+    color: rgb(211, 43, 94);
+    border-radius: 3px;
+    border-color: rgb(170, 170, 170);
+    padding: 5px;
+}
+
+.container-price {
+    text-align: left;
+    margin: 20px 100px;
+    padding: 20px;
+    font-size: 1rem;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+}
+
+.title-passengers {
+    width: 20%;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.test {
+    padding: 20px;
+}
+
+.name-back {
+    background-color: grey;
+}
+
+.description {
+    margin-bottom: 50px;
 }
