--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.background-calc, .background-price {
+.background-calc, #background-price {
     background-color: rgb(211, 43, 94);
     color: white;
     text-align: center;
